// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncButton component should match snapshot when loading 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  border-radius: 1rem;
  width: 100%;
  display: flex;
  align-items: center;
  place-content: center;
  padding: 0.5rem 2rem;
  height: 3.5rem;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 0.5rem 1.5rem;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 600;
  text-wrap: nowrap;
  background-color: #64a98c;
  color: #fff;
}

.c0:disabled {
  background-color: #ccc;
  opacity: 1;
}

.c1 {
  width: 2.5rem;
  height: 2.5rem;
  margin: auto;
  border: 0.5rem solid #00000038;
  border-top: 0.5rem solid #e80537;
  border-radius: 50%;
  animation: cilQsd 1s linear infinite;
}

.c2 {
  width: 1.3rem;
  height: 1.3rem;
  border-width: 0.25rem;
}

<button
    class="c0"
    data-testid="async-button"
    disabled=""
  >
    <div
      aria-live="polite"
      class="c1 c2"
      role="status"
    />
  </button>
</DocumentFragment>
`;

exports[`AsyncButton component should match snapshot when not loading 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  border-radius: 1rem;
  width: 100%;
  display: flex;
  align-items: center;
  place-content: center;
  padding: 0.5rem 2rem;
  height: 3.5rem;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 0.5rem 1.5rem;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 600;
  text-wrap: nowrap;
  background-color: #64a98c;
  color: #fff;
}

.c0:disabled {
  background-color: #ccc;
  opacity: 1;
}

<button
    class="c0"
    data-testid="async-button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
